# locust-cloud

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Dockerfile-timescale  README.md  alb-teardown.py  app.py  docker-compose.yml  hatch_build.py  locust_graph_viewer.py  locustfile.py  materialized_view.sql  package.json  pyproject.toml  requirements.txt  run.sh  setup.py  test_me.py  timescale_schema.sql  tox.ini  zz_hypertable.sql
.chalice/: config.json  policy.json
.chalice/deployed/: dev.json
.github/: dependabot.yaml
.github/workflows/: daily-check.yml  push-to-ecr.yml  tests.yml
chalicelib/: kubernetes_client.py  mutate_cluster.py
chalicelib/kubernetes/: aws-logging-cloudwatch-configmap.yaml  master.yaml  service.yaml  worker.yaml
clickhouse/: rls.sql  sql.sql
docs/: .gitignore  conf.py  examples.rst  first-run.rst  index.rst  list-available-options.rst
kubernetes/: master.yaml  service.yaml  worker.yaml
locust_cloud/: __init__.py  __main__.py  actions.py  args.py  auth.py  client.py  cloud.py  common.py  constants.py  credential_manager.py  idle_exit.py  import_finder.py  main.py  socket_logging.py  utils.py  web_login.py  websocket.py
locust_cloud/docs/: 2-examples.rst  kubernetes-operator.rst  locust-cloud.rst
locust_cloud/influxdb/: exporter.py
locust_cloud/timescale/: api.py  exporter.py  queries.py  query.py
locust_cloud/webui/: package.json
locust_cloud/webui/public/: config.js
locust_cloud/webui/src/: App.test.tsx  App.tsx  config.ts  global.d.ts  index.tsx
locust_cloud/webui/src/components/Gauge/: Gauge.test.tsx  Gauge.tsx
locust_cloud/webui/src/components/Layout/: Footer.tsx  Layout.tsx  Navbar.tsx  StateButtons.tsx  ViewTypeSelector.tsx
locust_cloud/webui/src/components/Layout/tests/: StateButtons.test.tsx  ViewTypeSelector.test.tsx
locust_cloud/webui/src/components/Snackbar/: Snackbar.test.tsx  Snackbar.tsx
locust_cloud/webui/src/components/SwarmForm/: SwarmForm.tsx
locust_cloud/webui/src/components/Toolbar/: Toolbar.constants.ts  Toolbar.test.tsx  Toolbar.tsx
locust_cloud/webui/src/components/tabs/: Charts.tsx  Customer.tsx  Scatterplot.tsx  Stats.tsx  Testruns.tsx
locust_cloud/webui/src/components/tabs/tests/: Charts.test.tsx  Customer.test.tsx  Scatterplot.test.tsx  Stats.test.tsx  Testruns.test.tsx
locust_cloud/webui/src/hooks/: useAwaitInterval.ts  useFakeInterval.ts  useFetchCustomer.ts  useFetchTestruns.ts  useSwarmForm.ts
locust_cloud/webui/src/hooks/tests/: useFetchCustomer.test.tsx  useFetchTestruns.test.tsx
locust_cloud/webui/src/redux/: context.ts  hooks.ts  store.ts
locust_cloud/webui/src/redux/api/: cloud-stats.ts
locust_cloud/webui/src/redux/slice/: customer.slice.ts  root.slice.ts  snackbar.slice.ts  toolbar.slice.ts  ui.slice.ts
locust_cloud/webui/src/test/: constants.ts  setup.ts  testUtils.tsx
locust_cloud/webui/src/test/mocks/: customer.mock.ts  swarmState.mock.ts  testruns.mock.ts
locust_cloud/webui/src/types/: customer.types.ts  request.types.ts  testruns.types.ts  window.types.ts
locust_cloud/webui/src/utils/: api.ts  chart.ts  cookie.ts  date.ts  url.ts
locust_cloud/webui/src/utils/tests/: chart.test.ts
scripts/: cloud.py
semgrep/: malicious-python.yml
tests/: args_test.py  browser_tests.py  cloud_test.py  import_finder_test.py  imports_test.py  web_login_test.py  websocket_test.py
webui/: .eslintrc  .gitignore  index.html  package.json  vite.config.ts
webui/src/: App.tsx  Scatterplot.tsx  Timescale.tsx  index.tsx
webui/src/components/Gauge/: Gauge.tsx
webui/src/components/Layout/: Layout.tsx
webui/src/components/Toolbar/: Toolbar.tsx
webui/src/components/tabs/: Charts.tsx  Scatterplot.tsx  Stats.tsx  Testruns.tsx
webui/src/hooks/: useFetchTestruns.ts
webui/src/redux/: hooks.ts  store.ts  utils.ts
webui/src/redux/slice/: root.slice.ts  toolbar.slice.ts
webui/src/styles/: theme.ts
webui/src/tabs/: Charts.tsx  Scatterplot.tsx  Stats.tsx
webui/src/utils/: api.ts
