[project]
name = "locust-cloud"
dynamic = ["version"]
description = "Locust Cloud"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "locust>=2.31.6",
    "blessed==1.20.0",
    "boto3==1.34.125",
    "botocore==1.34.125",
    "cachetools==5.3.3",
    "certifi==2024.6.2",
    "chalice==1.31.1",
    "chardet==5.2.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "distlib==0.3.8",
    "filelock==3.15.1",
    "google-auth==2.29.0",
    "idna==3.7",
    "inquirer==2.10.1",
    "jmespath==1.0.1",
    "kubernetes==29.0.0",
    "oauthlib==3.2.2",
    "packaging==24.1",
    "platformdirs==4.2.2",
    "pluggy==1.5.0",
    "pyasn1==0.6.0",
    "pyasn1_modules==0.4.0",
    "pyproject-api==1.6.1",
    "python-dateutil==2.9.0.post0",
    "python-editor==1.0.4",
    "PyYAML==6.0.1",
    "readchar==4.1.0",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rsa==4.9",
    "s3transfer==0.10.1",
    "six==1.16.0",
    "typing_extensions==4.12.2",
    "urllib3==2.2.1",
    "virtualenv==20.26.2",
    "wcwidth==0.2.13",
    "websocket-client==1.8.0",
    "psycopg[binary,pool]>=3.2.1",
    "PyJWT>=2.0"

]
[project.urls]
Homepage = "https://locust.cloud"

[project.scripts]
locust-cloud="locust_cloud.cloud:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "locust_cloud/**/*"
]
exclude = [
    "locust_cloud/webui/src",
    "locust_cloud/webui/node_modules",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.custom]
[tool.hatch.build.targets.BuildFrontend.hooks.custom]

[tool.ruff]
target-version = "py311"
line-length = 120
lint.ignore = ["E402", "E501", "E713", "E731"]
lint.select = ["E", "F", "W", "UP", "I001", "ARG001"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|resp)$"

[tool.ruff.lint.isort.sections]
locust_cloud = ["locust_cloud"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
    "pyright>=1.1.380",
    "types-boto3>=1.0.2",
]


[tool.pyright]
reportOptionalMemberAccess = "none"
reportPossiblyUnboundVariable = "warning"
reportOptionalSubscript = "none"
