[project]
name = "locust-cloud"
dynamic = ["version"]
description = "Locust Cloud"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "locust>=2.32.4",
    "boto3==1.34.125",
    "psycopg[binary,pool]>=3.2.1",
    "PyJWT>=2.0",
    "python-socketio[client]==5.11.4",
    "gevent-websocket==0.10.1",
]
[project.urls]
Homepage = "https://locust.cloud"

[project.scripts]
locust-cloud="locust_cloud.cloud:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "locust_cloud/**/*"
]
exclude = [
    "locust_cloud/webui/src",
    "locust_cloud/webui/node_modules",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.custom]
[tool.hatch.build.targets.BuildFrontend.hooks.custom]

[tool.ruff]
target-version = "py311"
line-length = 120
lint.ignore = ["E402", "E501", "E713", "E731"]
lint.select = ["E", "F", "W", "UP", "I001", "ARG001"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|resp)$"

[tool.ruff.lint.isort.sections]
locust_cloud = ["locust_cloud"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
    "pyright>=1.1.380",
    "types-boto3>=1.0.2",
]


[tool.pyright]
reportOptionalMemberAccess = "none"
reportPossiblyUnboundVariable = "warning"
reportOptionalSubscript = "none"
reportPrivateImportUsage = "none"
